package com.example.ProgramTechCP_Filtration.data;

import com.example.ProgramTechCP_Filtration.data.model.Params;
import org.springframework.data.jpa.repository.JpaRepository;


public interface ParametersRepository extends JpaRepository<Params,String> {
}
